<resources>
    <string name="app_name">Proyecto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Transaccion</string>
    <string name="menu_slideshow">Reporte</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_cuentas">Cuentas</string>
    <string name="menu_deposito">Deposito</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="Efect">Efectivo</string>
    <string name="deb">Debito</string>
    <string name="cred">Credito</string>
</resources>