<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CrearCuentaFragment">

    <EditText
        android:id="@+id/cantidadD"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Cantidad De Dinero En La Cuenta"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomCuenta" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="360dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:text="Crear"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidadD" />

    <EditText
        android:id="@+id/nomCuenta"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Nombre De La Cuenta"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rGroup" />

    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="113dp"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/cuentaEfectivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Efect"
            android:textAlignment="center"

            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/cuentaDebito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/deb"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/cuentaCredito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cred"
            android:textSize="18sp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>